# headhunter

./: .dockerignore  .env.example  .firebaserc  .gitignore  .mcp.json.template  ARCHITECTURE.md  AUDIT_REPORT.md  BREAKTHROUGH.md  CLAUDE-FLOW.md  CLAUDE.md  COST_OPTIMIZATION_COMPLETED.md  CURRENT_STATUS.md  DIMENSION_FIX_INSTRUCTIONS.md  Dockerfile.reprocess  EMBEDDING_FIX_SUMMARY.md  EMBEDDING_REMEDIATION_PLAN.md  FIX_EMBEDDING_DIMENSION.md  Handover.md  PRD.md  PREVENT_DIMENSION_REVERT.md  PRODUCTION_MONITORING_SETUP.md  PRODUCTION_STATUS.md  PRODUCTION_TESTING_READINESS.md  README.md  ROOT_CAUSE_AND_FIX_SUMMARY.md  SEARCH_TEST_STATUS.md  SECRETS_AUDIT_REPORT.md  SECURITY.md  SECURITY_HEADERS_IMPLEMENTATION.md  STATUS_UPDATE.md  STEP_BY_STEP_FIX_GUIDE.md  SUCCESS_STATUS.md  SUSPENSION_PLAN.md  TROUBLESHOOTING_SUMMARY.md  cloudbuild-enrich.yaml  cloudbuild-reprocess-job.yaml  cloudbuild-rerank.yaml  cors.json  debug_batch.py  docker-compose.local.yml  (+15 more)
.deployment/: PRODUCTION_READINESS_REPORT_20251004.md  validation-report-20251001-010532.json
.git-rewrite/: backup-refs  commit  index  parse  revs
.husky/: pre-commit
.integration/: autofix_actions.json  cache_analysis_report.json  load_test_report.json  performance_sla_report.json  suite-report.json
.planning/: MILESTONE-AUDIT.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.quarantine/: 20251006T145921_50724841-632a-40ca-a4b2-2d0842cf2548.txt  20251125T223142_56cc3ab4-c8c2-4e3d-9b84-6bc2ac73b6e4.txt  20251125T223219_76c9242a-1128-48c8-a083-456dc7c8a7cd.txt  quarantine_2db2a414.json  (+17 more)
(+1528 files in other folders)
